kubernetes/cluster/monitoring/speedtest/speedtest.yaml
# Service: Speedtest Tracker
# Ingress: speed.brhd.io
# Label: app.kubernetes.io/name: speedtest
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: monitoring
  labels:
    app.kubernetes.io/name: speedtest
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/name: speedtest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: monitoring
  labels:
    app.kubernetes.io/name: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: speedtest
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: monitoring
      labels:
        app.kubernetes.io/name: speedtest
    spec:
      restartPolicy: Always
      containers:
        - name: speedtest
          image: ghcr.io/linuxserver/speedtest-tracker:1.14.7
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              memory: 350Mi
          ports:
            - containerPort: 80
            - containerPort: 443
      nodeSelector:
        feature.node.kubernetes.io/cpu-cpuid.HYPERVISOR: "true"
