kubernetes/cluster/monitoring/speedtest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  namespace: monitoring
  labels:
    app.kubernetes.io/name: speedtest
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
    - host: speed.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: speedtest
                port:
                  number: 443
  tls:
    - hosts:
        - speed.brhd.io
